Formatted src/main/java/digdir.dc24_eu_wallet/component/SendWebCred according to suggestions from SonarLint